Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19684

ListView/GridView missing headerItem and footerItem properties

    XMLWordPrintable

Details

    • a380768b135c16d3621ec0be8e1bbe410cd7ed47 (qt/tqtc-qtdeclarative/5.12.0)

    Description

      The ListView and GridView has a "highlight" Component property and a "highlightItem"
      property that refers to the item created from said Component. They also have "header"
      and "footer" Component properties, but there are no "headerItem" and "footerItem"
      properties referring to the items created based on these two Components. For API
      symmetry and convenience these ought to be added.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            martjone Martin Jones (closed Nokia identity) (Inactive)
            mathiasm Mathias Malmqvist
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes