Add headerItem and footerItem properties to views.

Fixes: QTBUG-19684

Change-Id: Iea7d4a4f902cc45cb0cca8e1221fdb993f0bebd2
Reviewed-on: http://codereview.qt.nokia.com/2151
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Bea Lam <bea.lam@nokia.com>